--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "quill": "^1.3.7",
     "sass-loader": "^7.3.1",
     "vue": "^2.6.14",
-    "vue-router": "^3.5.3"
+    "vue-router": "^3.5.3",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.5",
