--- a/package.json
+++ b/package.json
@@ -12,12 +12,11 @@
     "axios": "^1.2.0",
     "core-js": "^3.8.3",
     "element-ui": "^2.15.12",
-    "node-sass": "^4.14.1",
+    "node-sass": "^4.14.1",                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     
     "quill": "^1.3.7",
     "sass-loader": "^7.3.1",
     "vue": "^2.6.14",
-    "vue-router": "^3.5.3",
-    "vuex": "^4.1.0"
+    "vue-router": "^3.5.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.5",
